--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -127,6 +127,7 @@ jobs:
             echo ${{format('PROTOTYPE_BRANCHES_PREFIX=''{0}''', github.event.inputs.prefix)}}
             echo "${{ github.event.inputs.revisions != '' && format('REVISIONS=''{0}''', github.event.inputs.revisions) || '' }}"
             echo "${{ github.event.inputs.revisions == '' && github.event.inputs.prefix && format('PROTOTYPE_BRANCHES_PREFIX=''{0}''', github.event.inputs.prefix) || '' }}"
+            make environment
 
 
       #
